# destiny-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
destiny-rs/: Cargo.toml
destiny-rs-codegen/: Cargo.toml
destiny-rs-codegen/src/: codegen_uses.rs  endpoint.rs  helper.rs  main.rs  object.rs
destiny-rs/src/: lib.rs  main.rs
destiny-rs/src/models/: api.rs  groupsv2.rs  historical_stats.rs  ignores.rs  item.rs  locale.rs  manifest.rs  mod.rs  profile.rs  progression.rs  public_milestone.rs  quests.rs  response.rs  types.rs
destiny-rs/src/models/components/: character.rs  inventory.rs  kiosks.rs  metrics.rs  mod.rs  user.rs  vendor.rs
destiny-rs/src/models/manifest_models/: class.rs  gender.rs  inventory_item.rs  presentation_node.rs  race.rs  season.rs
destiny-rs/src/test/: hash.rs  manifest.rs  membership.rs  mod.rs
destiny-rs/src/traits/: component.rs  id.rs  manifest_key.rs  mod.rs
manifest-downloader/: Cargo.toml
manifest-downloader/src/: main.rs
src/: lib.rs  manifest_downloader.rs
src/models/: activity_mode.rs  api.rs  color.rs  historical_stats.rs  item.rs  manifest.rs  membership.rs  mod.rs  response.rs  types.rs  user.rs
src/models/components/: character.rs  inventory.rs  mod.rs  user.rs  vendor.rs
src/models/manifest_models/: lore.rs  mod.rs  presentation_node.rs  race.rs  record.rs  vendor.rs
src/test/: api.rs  manifest.rs  mod.rs  model.rs
test_data/: GeneralUser.json
