[package]
name = "destiny_rs"
version = "0.1.0"
authors = ["Jasper Fortuin <zeskeertwee@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["bungie", "destiny"]
repository = "https://github.com/zeskeertwee/destiny-rs"
description = "An async library to interact with Bungie's destiny 2 api."
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"
sqlite = "0.25.3"
zip = "0.5.11"
anyhow = "1.0.39"
async-trait = "0.1.48"

[dependencies.tokio]
version = "1.4.0"
features = ["macros"]

[dev-dependencies]
tokio-test = "0.4.1"